--- a/src/pages/location/location.html
+++ b/src/pages/location/location.html
@@ -12,7 +12,7 @@
                  placeholder="Choose city">
   </ion-searchbar>
   <ion-item-group>
-    <ion-list>
+    <ion-list no-lines>
       <ion-item-divider color="light">Belarus</ion-item-divider>
       <button ion-item
               *ngFor="let city of cityList"
