--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title>Ionic App</title>
+    <title>Cool weather</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="theme-color" content="#4e8ef7">
 
-    <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/icon/favicon.png">
     <link rel="manifest" href="manifest.json">
     <link href="build/main.css" rel="stylesheet">
 
     <script src="cordova.js"></script>
+    <script src="node_modules/chart.js/src/chart.js"></script>
   </head>
   <body>
     <ion-app></ion-app>
